--- a/index.ipynb
+++ b/index.ipynb
@@ -80,7 +80,8 @@
    "outputs": [],
    "source": [
     "# create database connection here\n",
-    "import"
+    "import sqlite3\n",
+    "connection = sqlite3.conn"
    ]
   },
   {
