--- a/index.ipynb
+++ b/index.ipynb
@@ -105,7 +105,7 @@
    "outputs": [],
    "source": [
     "# create table here\n",
-    "cursor.execute"
+    "cursor.execute('''CREATE TABLE cats ()''')"
    ]
   },
   {
