--- a/index.ipynb
+++ b/index.ipynb
@@ -105,7 +105,7 @@
    "outputs": [],
    "source": [
     "# create table here\n",
-    "cursor.execute('''CREATE TABLE cats ()''')"
+    "cursor.execute('''CREATE TABLE cats (id, name, age, breed, owner_id)''')"
    ]
   },
   {
