automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -141,6 +141,10 @@
    "outputs": [],
    "source": [
     "# insert data here\n",
+    "cursor.execute('''INSERT''')\n",
+    "cursor.execute()\n",
+    "cursor.execute()\n",
+    "cursor.execute()\n",
     "cursor.execute()"
    ]
   },
