--- a/index.ipynb
+++ b/index.ipynb
@@ -141,7 +141,7 @@
    "outputs": [],
    "source": [
     "# insert data here\n",
-    "cursor.execute('''INSERT''')\n",
+    "cursor.execute('''INSERT INTO cats ()''')\n",
     "cursor.execute()\n",
     "cursor.execute()\n",
     "cursor.execute()\n",
