--- a/index.ipynb
+++ b/index.ipynb
@@ -142,9 +142,9 @@
    "source": [
     "# insert data here\n",
     "cursor.execute('''INSERT INTO cats (name, age, breed, owner_id) VALUES ()''')\n",
-    "cursor.execute()\n",
-    "cursor.execute()\n",
-    "cursor.execute()\n",
+    "cursor.execute('''INSERT INTO cats (name, age, breed, owner_id) VALUES ()''')\n",
+    "cursor.execute('''INSERT INTO cats (name, age, breed, owner_id) VALUES ()''')\n",
+    "cursor.execute('''INSERT INTO cats (name, age, breed, owner_id) VALUES ()''')\n",
     "cursor.execute()"
    ]
   },
