--- a/index.ipynb
+++ b/index.ipynb
@@ -145,7 +145,7 @@
     "cursor.execute('''INSERT INTO cats (name, age, breed, owner_id) VALUES ()''')\n",
     "cursor.execute('''INSERT INTO cats (name, age, breed, owner_id) VALUES ()''')\n",
     "cursor.execute('''INSERT INTO cats (name, age, breed, owner_id) VALUES ()''')\n",
-    "cursor.execute()"
+    "cursor.execute('''INSERT INTO cats (name, age, breed, owner_id) VALUES ()''')"
    ]
   },
   {
