--- a/index.ipynb
+++ b/index.ipynb
@@ -143,9 +143,9 @@
     "# insert data here\n",
     "cursor.execute('''INSERT INTO cats (name, age, breed, owner_id) VALUES ()''')\n",
     "cursor.execute('''INSERT INTO cats (name, age, breed, owner_id) VALUES ()''')\n",
-    "cursor.execute('''INSERT INTO cats (name, age, breed, owner_id) VALUES ()''')\n",
-    "cursor.execute('''INSERT INTO cats (name, age, breed, owner_id) VALUES ()''')\n",
-    "cursor.execute('''INSERT INTO cats (name, age, breed, owner_id) VALUES ()''')"
+    "cursor.execute('''INSERT INTO cats (name, age, breed) VALUES ()''')\n",
+    "cursor.execute('''INSERT INTO cats (name, age, breed) VALUES ()''')\n",
+    "cursor.execute('''INSERT INTO cats (name, age, breed) VALUES ()''')"
    ]
   },
   {
