automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -142,10 +142,10 @@
    "source": [
     "# insert data here\n",
     "cursor.execute('''INSERT INTO cats (name, age, breed, owner_id) VALUES ();''')\n",
-    "cursor.execute('''INSERT INTO cats (name, age, breed, owner_id) VALUES ()''')\n",
-    "cursor.execute('''INSERT INTO cats (name, age, breed) VALUES ()''')\n",
-    "cursor.execute('''INSERT INTO cats (name, age, breed) VALUES ()''')\n",
-    "cursor.execute('''INSERT INTO cats (name, age, breed) VALUES ()''')"
+    "cursor.execute('''INSERT INTO cats (name, age, breed, owner_id) VALUES ();''')\n",
+    "cursor.execute('''INSERT INTO cats (name, age, breed) VALUES ();''')\n",
+    "cursor.execute('''INSERT INTO cats (name, age, breed) VALUES ();''')\n",
+    "cursor.execute('''INSERT INTO cats (name, age, breed) VALUES ();''')"
    ]
   },
   {
