--- a/index.ipynb
+++ b/index.ipynb
@@ -142,7 +142,7 @@
    "source": [
     "# insert data here\n",
     "cursor.execute('''INSERT INTO cats (name, age, breed, owner_id) VALUES (\"Maru\", 3 , \"Scottish Fold\", 1);''')\n",
-    "cursor.execute('''INSERT INTO cats (name, age, breed, owner_id) VALUES ();''')\n",
+    "cursor.execute('''INSERT INTO cats (name, age, breed, owner_id) VALUES (\"Hana\", 1 , \"Tabby\", 1);''')\n",
     "cursor.execute('''INSERT INTO cats (name, age, breed) VALUES ();''')\n",
     "cursor.execute('''INSERT INTO cats (name, age, breed) VALUES ();''')\n",
     "cursor.execute('''INSERT INTO cats (name, age, breed) VALUES ();''')"
