--- a/index.ipynb
+++ b/index.ipynb
@@ -143,7 +143,7 @@
     "# insert data here\n",
     "cursor.execute('''INSERT INTO cats (name, age, breed, owner_id) VALUES (\"Maru\", 3 , \"Scottish Fold\", 1);''')\n",
     "cursor.execute('''INSERT INTO cats (name, age, breed, owner_id) VALUES (\"Hana\", 1 , \"Tabby\", 1);''')\n",
-    "cursor.execute('''INSERT INTO cats (name, age, breed) VALUES ();''')\n",
+    "cursor.execute('''INSERT INTO cats (name, age, breed) VALUES (Lil\\' Bub\", 5, \"American Shorthair);''')\n",
     "cursor.execute('''INSERT INTO cats (name, age, breed) VALUES ();''')\n",
     "cursor.execute('''INSERT INTO cats (name, age, breed) VALUES ();''')"
    ]
