--- a/index.ipynb
+++ b/index.ipynb
@@ -145,7 +145,7 @@
     "cursor.execute('''INSERT INTO cats (name, age, breed, owner_id) VALUES (\"Hana\", 1 , \"Tabby\", 1);''')\n",
     "cursor.execute('''INSERT INTO cats (name, age, breed) VALUES (\"Lil\\' Bub\", 5, \"American Shorthair\");''')\n",
     "cursor.execute('''INSERT INTO cats (name, age, breed) VALUES (\"Moe\", 10, \"Tabby\");''')\n",
-    "cursor.execute('''INSERT INTO cats (name, age, breed) VALUES ();''')"
+    "cursor.execute('''INSERT INTO cats (name, age, breed) VALUES (\"Patches\", 2, \"Calico\");''')"
    ]
   },
   {
