--- a/index.ipynb
+++ b/index.ipynb
@@ -238,7 +238,7 @@
    "outputs": [],
    "source": [
     "# select all cats order by age here\n",
-    "cursor"
+    "cursor.execute('''SELECT * FROM cats ''')"
    ]
   },
   {
