--- a/index.ipynb
+++ b/index.ipynb
@@ -289,7 +289,7 @@
    "outputs": [],
    "source": [
     "# select cats order by age descending here\n",
-    "cursor.ex"
+    "cursor.execute('''SELECT * FROM cats ORDER B''')"
    ]
   },
   {
