automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -341,14 +341,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 'Moe', 10, 'Tabby', None)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor.execute('''SELECT * FROM cats ORDER BY age DESC LIMIT 1;''').fetchone()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "cursor.execute('''SELECT * FROM cats ORDER BY age DESC LIMIT 1;''').fetchone()\n",
-    "# OR\n",
-    "# cursor.execute('''SELECT * FROM cats ORDER BY age DESC;''').fetchone() # returns the same element as the above"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
