--- a/index.ipynb
+++ b/index.ipynb
@@ -405,7 +405,7 @@
    "outputs": [],
    "source": [
     "# select the two oldest cats here\n",
-    "cursor.e"
+    "cursor.execute(''' SELECT ''')"
    ]
   },
   {
