--- a/index.ipynb
+++ b/index.ipynb
@@ -400,12 +400,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f1f7c0f33b0>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# select the two oldest cats here\n",
-    "cursor.execute(''' SELECT * FROM cats ORDER BY age D''')"
+    "cursor.execute(''' SELECT * FROM cats ORDER BY age DESC LIMIT 2; ''')"
    ]
   },
   {
