--- a/index.ipynb
+++ b/index.ipynb
@@ -456,7 +456,7 @@
    "outputs": [],
    "source": [
     "# find all records between ages 1 and three here\n",
-    "cursor.execute (''' SELECT ''')"
+    "cursor.execute (''' SELECT * FROM cats WHERE age ''')"
    ]
   },
   {
