--- a/index.ipynb
+++ b/index.ipynb
@@ -451,12 +451,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Maru',), ('Hana',), ('Patches',)]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# find all records between ages 1 and three here\n",
-    "cursor.execute (''' SELECT * FROM cats WHERE age BETWEEN 1 AND 3; ''')"
+    "cursor.execute (''' SELECT name FROM cats WHERE age BETWEEN 1 AND 3; ''').fetchall()"
    ]
   },
   {
