--- a/index.ipynb
+++ b/index.ipynb
@@ -503,6 +503,7 @@
    "outputs": [],
    "source": [
     "# insert new record here\n",
+    "cursor.\n",
     "# retrieve all records from the cat table here"
    ]
   },
