automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -503,7 +503,7 @@
    "outputs": [],
    "source": [
     "# insert new record here\n",
-    "cursor.\n",
+    "cursor.execute(''' INSERT INTO cats ''')\n",
     "# retrieve all records from the cat table here"
    ]
   },
