--- a/index.ipynb
+++ b/index.ipynb
@@ -503,7 +503,7 @@
    "outputs": [],
    "source": [
     "# insert new record here\n",
-    "cursor.execute(''' INSERT INTO cats (name, age, breed) VALUES (NU)''')\n",
+    "cursor.execute(''' INSERT INTO cats (name, age, breed) VALUES (NULL, NULL, \"Tabby\");''')\n",
     "# retrieve all records from the cat table here"
    ]
   },
