--- a/index.ipynb
+++ b/index.ipynb
@@ -504,7 +504,9 @@
    "source": [
     "# insert new record here\n",
     "cursor.execute(''' INSERT INTO cats (name, age, breed) VALUES (NULL, NULL, \"Tabby\"); ''')\n",
-    "# retrieve all records from the cat table here"
+    "\n",
+    "# retrieve all records from the cat table here\n",
+    "cursor.execute(''' S''')"
    ]
   },
   {
