--- a/index.ipynb
+++ b/index.ipynb
@@ -506,7 +506,7 @@
     "cursor.execute(''' INSERT INTO cats (name, age, breed) VALUES (NULL, NULL, \"Tabby\"); ''')\n",
     "\n",
     "# retrieve all records from the cat table here\n",
-    "cursor.execute(''' S''')"
+    "cursor.execute(''' SELECT * FROM cats;''').fetchall"
    ]
   },
   {
