--- a/index.ipynb
+++ b/index.ipynb
@@ -554,7 +554,7 @@
    "outputs": [],
    "source": [
     "# select cats where the name field is null here\n",
-    "cursor.execute(''' SE''')"
+    "cursor.execute(''' SELECT * FROM cats WHERE name IS NULL;''')"
    ]
   },
   {
