--- a/index.ipynb
+++ b/index.ipynb
@@ -607,7 +607,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# retrieve the count of cats whose owner id = 1 here"
+    "# retrieve the count of cats whose owner id = 1 here\n",
+    "cursor.execute('''''')"
    ]
   },
   {
