--- a/index.ipynb
+++ b/index.ipynb
@@ -608,7 +608,7 @@
    "outputs": [],
    "source": [
     "# retrieve the count of cats whose owner id = 1 here\n",
-    "cursor.execute('''SELECT COUNT (;''')"
+    "cursor.execute('''SELECT COUNT''')"
    ]
   },
   {
