--- a/index.ipynb
+++ b/index.ipynb
@@ -672,7 +672,7 @@
    "outputs": [],
    "source": [
     "# execute GROUP BY sql statement here\n",
-    "cursor.execute('''SELECT breed, COUNT(b)''')"
+    "cursor.execute('''SELECT breed, COUNT(breed) FROM cats ''')"
    ]
   },
   {
