--- a/index.ipynb
+++ b/index.ipynb
@@ -712,7 +712,7 @@
    },
    "outputs": [],
    "source": [
-    "# execute multiple column group by statement here"
+    "# execute multiple column group by statement here\n"
    ]
   },
   {
