automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -712,7 +712,8 @@
    },
    "outputs": [],
    "source": [
-    "# execute multiple column group by statement here\n"
+    "# execute multiple column group by statement here\n",
+    "cursor.execute(''' SELECT ''')"
    ]
   },
   {
