--- a/index.ipynb
+++ b/index.ipynb
@@ -713,7 +713,7 @@
    "outputs": [],
    "source": [
     "# execute multiple column group by statement here\n",
-    "cursor.execute(''' SELECT breed, owner_id, CO''')"
+    "cursor.execute(''' SELECT breed, owner_id, COUNT(breed) ''')"
    ]
   },
   {
